2005-01-27  Kjartan Maraas  <kmaraas@gnome.org>

	* theme-thumbnailer.c: (main): Don't leak the theme name
	if the theme is invalid.
	* themus-properties-view.c: (themus_properties_view_init):
	NULL vs. 0 in gnome_theme_init()

2005-01-04  Shakti Sen <shprasad@novell.com>

	* theme-thumbnailer.c (main): Added the full path of the theme
	so that it will create the thumbnail.
	Fixes bug #153203

2004-12-25  Kjartan Maraas  <kmaraas@gnome.org>

	* theme-method.c: (vfs_module_init): NULL vs. 0
	* theme-thumbnailer.c: (main): Same
	* themus-theme-applier.c: (main): Same

2004-12-10  James Henstridge  <james@jamesh.id.au>

	* Makefile.am: update the desktop file database on install, since
	we add a new mime action.

	* themus-theme-applier.desktop.in.in (Exec): use %u rather than
	%U, since it only handles a single file.

2004-11-27  James Henstridge  <james@jamesh.id.au>

	* themus.applications, themus.keys: remove.

	* themus-theme-applier.desktop.in.in: new file to hook up
	themus-apply-theme, since the old .applications file isn't used by
	the new MIME system.

	* themus-theme-applier.c: get rid of the bonobo includes.

	* Makefile.am: update to install Nautilus extension.

	* themus-properties-main.c: convert from a Bonobo component to a
	Nautilus extension.

	* themus-properties-view.[ch]: convert to a simple widget.  Also
	fix a bunch of leaks.

2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

2004-07-22  Christian Neumair  <chris@gnome-de.org>

	* themus-properties-view.c: Use gi18n-lib for internationalization,
	fixes #109206.

2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2004-02-16  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=134389