@@ -1,3 +1,8 @@
+2005-02-09  Sebastien Bacher  <seb128@debian.org>
+
+	* theme-thumbnailer.c: (main): change back to the previous code,
+	that fixes the themes:/// thumbnails (Closes: #165778).
+
 2005-01-27  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* theme-thumbnailer.c: (main): Don't leak the theme name
